NIFI-16260 Add a Database Password Provider for GCP CloudSQL (#11604)
Signed-off-by: David Handermann <exceptionfactory@apache.org>